QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

CVS HEAD

- The current selected device is now shown with a checkmark on the
  device selection menu(s), while on the settings dialog.

- Set to use QApplication::setMainWidget() instead of registering the 
  traditional lastWindowClosed() signal to quit() slot, just to let
  the -geometry command line argument have some effect on X11.


0.2.18   2005-07-18  The mantra of bugfixes stays on.

- A freezing and endless loop condition on the patchbay socket item
  duplication (copy) has been fixed.

- Fixed output disability when messages limit option is turned off
  (thanks again to Wolfgang Woehl for spotting this one).


0.2.17   2005-06-17  Systemic I/O Latency settings are in.

- Systemic I/O Latency settings are now featured for the alsa, oss and
  coreaudio backends, letting you specify the known latency of external
  hardware for client aware compensation purposes (thanks to Wolfgang Woehl,
  for the reminder).

- Update on last backstage changes to the coreaudio backend options
  (due to Stéphane Letz. Thanks).


0.2.16   2005-06-13  OSS device name selection and Mac OS X breakthrough.

- ALSA sequencer client/port name changes are now properly detected on the
  MIDI connections widget (as noted by Chris Cannam. Thanks).

- Long overdue transport buttons (rewind, backward and forward) finally 
  landed onto the main control window, at last :).

- Duplication (copy) of patchbay socket items was added.

- Do not ever try to start the JACK server if there's one already found
  running, on which case the client-only mode of operation is then activated
  (as kindly suggested by Orm Finnendahl, thanks).

- After several Mac OS X user requests, ALSA/MIDI sequencer support is
  now an option, otherwise detected at configure time and conditionally
  compiled in if, and only if, ALSA is found available (which has been